--- a/index.html
+++ b/index.html
@@ -2,74 +2,51 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ismail Ben Othman - Artiste Peintre</title>
-  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    .profile-section {
-      background-color: #4B5358; /* Gris de Payne */
-      text-align: center;
-      padding: 40px 20px;
-      color: white;
-    }
-    .profile-photo {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid white;
-    }
-    .gallery-section {
-      background-color: #FFD700; /* Jaune cadmium */
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-    .gallery img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border: 3px solid white;
-      border-radius: 10px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ismail Ben Othman - Artiste peintre</title>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <section class="profile-section">
-    <img src="ismael.jpg" alt="Ismail Ben Othman" class="profile-photo">
+  <header class="hero">
+    <img src="assets/images/ismael.jpg" alt="Ismail Ben Othman" class="profile-img">
     <h1>Ismail Ben Othman</h1>
-    <p>Artiste peintre tunisien</p>
-  </section>
+    <p data-fr="Artiste peintre tunisien" data-en="Tunisian visual artist">Artiste peintre tunisien</p>
+    <div class="lang-switch">
+      <button onclick="switchLang('fr')">FR</button>
+      <button onclick="switchLang('en')">EN</button>
+    </div>
+  </header>
 
   <section class="gallery-section">
-    <h2>Galerie</h2>
+    <h2 data-fr="Galerie" data-en="Gallery">Galerie</h2>
     <div class="gallery">
-      <a href="oeuvre1.jpg" data-lightbox="galerie"><img src="oeuvre1.jpg" alt=""></a>
-      <a href="oeuvre2.jpg" data-lightbox="galerie"><img src="oeuvre2.jpg" alt=""></a>
-      <a href="oeuvre3.jpg" data-lightbox="galerie"><img src="oeuvre3.jpg" alt=""></a>
-      <a href="oeuvre4.jpg" data-lightbox="galerie"><img src="oeuvre4.jpg" alt=""></a>
-      <a href="oeuvre5.jpg" data-lightbox="galerie"><img src="oeuvre5.jpg" alt=""></a>
-      <a href="oeuvre6.jpg" data-lightbox="galerie"><img src="oeuvre6.jpg" alt=""></a>
-      <a href="oeuvre7.jpg" data-lightbox="galerie"><img src="oeuvre7.jpg" alt=""></a>
-      <a href="oeuvre8.jpg" data-lightbox="galerie"><img src="oeuvre8.jpg" alt=""></a>
-      <a href="oeuvre9.jpg" data-lightbox="galerie"><img src="oeuvre9.jpg" alt=""></a>
-      <a href="oeuvre10.jpg" data-lightbox="galerie"><img src="oeuvre10.jpg" alt=""></a>
-      <a href="oeuvre11.jpg" data-lightbox="galerie"><img src="oeuvre11.jpg" alt=""></a>
-      <a href="oeuvre12.jpg" data-lightbox="galerie"><img src="oeuvre12.jpg" alt=""></a>
-      <a href="oeuvre13.jpg" data-lightbox="galerie"><img src="oeuvre13.jpg" alt=""></a>
+      <!-- Exemple d’image -->
+      <a href="assets/images/oeuvre1.jpg" target="_blank">
+        <img src="assets/images/oeuvre1.jpg" alt="Oeuvre 1">
+      </a>
+      <a href="assets/images/oeuvre2.jpg" target="_blank">
+        <img src="assets/images/oeuvre2.jpg" alt="Oeuvre 2">
+      </a>
     </div>
   </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
+  <section class="contact">
+    <h2 data-fr="Contact" data-en="Contact">Contact</h2>
+    <p>Email : <a href="mailto:ismailbenothman17@gmail.com">ismailbenothman17@gmail.com</a></p>
+    <p>Téléphone : <a href="tel:+21654427672">+216 54 427 672</a></p>
+    <div class="socials">
+      <a href="https://www.facebook.com/ismail.benothman" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com" target="_blank">Instagram</a>
+    </div>
+  </section>
+
+  <script>
+    function switchLang(lang) {
+      document.querySelectorAll('[data-fr], [data-en]').forEach(el => {
+        el.textContent = el.dataset[lang];
+      });
+    }
+  </script>
 </body>
 </html>
