--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : <a href="mailto:ismaelbenothman.art@gmail.com">ismaelbenothman.art@gmail.com</a></p>
+    <p>Email : <a href="mailto:ismailbenothman17@gmail.com">ismailbenothman17@gmail.com</a></p>
     <p>Téléphone : <a href="tel:+21654427672">+216 54 427 672</a></p>
   </section>
 
