--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ismael Ben Othman - Artiste Peintre</title>
+  <title>Ismail Ben Othman - Artiste Peintre</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <img src="ismael.jpg" alt="Ismael Ben Othman" class="hero-image" />
-    <h1>Ismael Ben Othman</h1>
+    <img src="ismael.jpg" alt="Ismail Ben Othman" class="hero-image" />
+    <h1>Ismail Ben Othman</h1>
     <p>Artiste Peintre | Créativité, Couleur et Émotion</p>
   </header>
 
