--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <a href="oeuvre11.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre11.jpg" alt="Œuvre 11" /></a>
       <a href="oeuvre12.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre12.jpg" alt="Œuvre 12" /></a>
       <a href="oeuvre13.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre13.jpg" alt="Œuvre 13" /></a>
+      <a href="oeuvre14.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre14.jpg" alt="Œuvre 14" /></a>
+      <a href="oeuvre15.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre15.jpg" alt="Œuvre 15" /></a>
+      <a href="oeuvre16.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre16.jpg" alt="Œuvre 16" /></a>
     </div>
   </section>
 
