--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="ismael.jpg" alt="Ismail Ben Othman" class="hero-image" />
+    <img src="ismail2.jpg" alt="Ismail Ben Othman" class="hero-image" />
     <h1>Ismail Ben Othman</h1>
     <p>Artiste Peintre | Créativité, Couleur et Émotion</p>
   </header>
