--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
       <a href="oeuvre14.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre14.jpg" alt="Œuvre 14" /></a>
       <a href="oeuvre15.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre15.jpg" alt="Œuvre 15" /></a>
       <a href="oeuvre16.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre16.jpg" alt="Œuvre 16" /></a>
+      <a href="oeuvre18.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre18.jpg" alt="Œuvre 18" /></a>
+      <a href="oeuvre19.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre19.jpg" alt="Œuvre 19" /></a>
+      <a href="oeuvre20.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre20.jpg" alt="Œuvre 20" /></a>
+      <a href="oeuvre21.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre21.jpg" alt="Œuvre 21" /></a>
+      <a href="oeuvre22.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre22.jpg" alt="Œuvre 22" /></a>
+      <a href="oeuvre23.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre23.jpg" alt="Œuvre 23" /></a>
+      <a href="oeuvre24.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre24.jpg" alt="Œuvre 24" /></a>
+      <a href="oeuvre25.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre25.jpg" alt="Œuvre 25" /></a>
+      <a href="oeuvre26.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre26.jpg" alt="Œuvre 26" /></a>
+      <a href="oeuvre27.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre27.jpg" alt="Œuvre 27" /></a>
+      <a href="oeuvre28.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre28.jpg" alt="Œuvre 28" /></a>
+      <a href="oeuvre29.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre29.jpg" alt="Œuvre 29" /></a>
     </div>
   </section>
 
