--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <a href="oeuvre14.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre14.jpg" alt="Œuvre 14" /></a>
       <a href="oeuvre15.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre15.jpg" alt="Œuvre 15" /></a>
       <a href="oeuvre16.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre16.jpg" alt="Œuvre 16" /></a>
+      <a href="oeuvre17.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre17.jpg" alt="Œuvre 17" /></a>
       <a href="oeuvre18.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre18.jpg" alt="Œuvre 18" /></a>
       <a href="oeuvre19.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre19.jpg" alt="Œuvre 19" /></a>
       <a href="oeuvre20.jpg" class="glightbox" data-gallery="artworks"><img src="oeuvre20.jpg" alt="Œuvre 20" /></a>
