--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <title>Galerie - Ismael Ben Othman</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    <!-- Liens réseaux sociaux -->
+<div style="text-align: center; margin: 40px 0;">
+  <a href="https://www.facebook.com/ismail.benothman" target="_blank" style="margin: 0 10px; text-decoration: none;">
+    <i class="fab fa-facebook fa-2x" style="color: #4267B2;"></i>
+  </a>
+</div>
+
+<!-- Font Awesome CDN -->
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
