--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="abstract" class="gallery-section" style="background-color:#ffe135">
     <h2>Galerie Abstract</h2>
     <div class="gallery">
-      <img src="assets/oeuvre10.jpg" alt="Abstract 1" />
+      <img src="assets/abstract/oeuvre10.jpg" alt="Abstract 1" />
       <img src="assets/oeuvre19.jpg" alt="Abstract 2" />
       <img src="assets/oeuvre20.jpg" alt="Abstract 3" />
     </div>
