--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     <h2>Galerie Abstract</h2>
     <div class="gallery">
       <img src="assets/Abstract/oeuvre10.jpg" alt="Abstract 1" />
-      <img src="assets/Abstract/oeuvre19.jpg" alt="Abstract 2" />
-      <img src="assets/Abstract/oeuvre20.jpg" alt="Abstract 3" />
+      <img src="assets/Abstract/oeuvre14.jpg" alt="Abstract 2" />
+      <img src="assets/Abstract/oeuvre2.jpg" alt="Abstract 3" />
+      <img src="assets/Abstract/oeuvre20.jpg" alt="Abstract 4" />
+      <img src="assets/Abstract/oeuvre29.jpg" alt="Abstract 5" />
     </div>
   </section>
 
