--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <section id="abstract" class="gallery-section" style="background-color:#ffe135">
     <h2>Galerie Abstract</h2>
     <div class="gallery">
-      <img src="assets/Abstract/oeuvre10.jpg" alt="Abstract 1" />
-      <img src="assets/Abstract/oeuvre14.jpg" alt="Abstract 2" />
-      <img src="assets/Abstract/oeuvre2.jpg" alt="Abstract 3" />
-      <img src="assets/Abstract/oeuvre20.jpg" alt="Abstract 4" />
-      <img src="assets/Abstract/oeuvre29.jpg" alt="Abstract 5" />
+      <img src="assets/abstract/oeuvre10.jpg" alt="Abstract 1" />
+      <img src="assets/abstract/oeuvre14.jpg" alt="Abstract 2" />
+      <img src="assets/abstract/oeuvre2.jpg" alt="Abstract 3" />
+      <img src="assets/abstract/oeuvre20.jpg" alt="Abstract 4" />
+      <img src="assets/abstract/oeuvre29.jpg" alt="Abstract 5" />
     </div>
   </section>
 
