--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <section id="figure" class="gallery-section" style="background-color:#ffe135">
     <h2>Galerie Figuratif</h2>
     <div class="gallery">
-      <img src="assets/oeuvre22.jpg" alt="Figure 1" />
-      <img src="assets/oeuvre25.jpg" alt="Figure 2" />
-      <img src="assets/oeuvre29.jpg" alt="Figure 3" />
+      <img src="assets/figure/oeuvre22.jpg" alt="figure 1" />
+      <img src="assets/figure/oeuvre25.jpg" alt="figure 2" />
+      <img src="assets/figure/oeuvre29.jpg" alt="figure 3" />
     </div>
   </section>
 
